--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prism-media",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "Easy-to-use stream-based media transcoding",
   "main": "src/index.js",
   "types": "typings/index.d.ts",
@@ -39,27 +39,19 @@
     }
   },
   "peerDependencies": {
-    "@discordjs/opus": ">=0.8.0 <1.0.0",
-    "ffmpeg-static": "^5.0.2 || ^4.2.7 || ^3.0.0 || ^2.4.0",
-    "node-opus": "^0.3.3",
     "opusscript": "^0.0.8"
   },
   "peerDependenciesMeta": {
-    "@discordjs/opus": {
-      "optional": true
-    },
-    "node-opus": {
-      "optional": true
-    },
     "opusscript": {
-      "optional": true
-    },
-    "ffmpeg-static": {
       "optional": true
     }
   },
   "files": [
     "src/",
     "typings/"
-  ]
+  ],
+  "dependencies": {
+    "events": "^3.3.0",
+    "stream-browserify": "^3.0.0"
+  }
 }
