--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "prism-media",
-  "version": "1.3.6",
-  "description": "Easy-to-use stream-based media transcoding",
-  "main": "src/index.js",
-  "types": "typings/index.d.ts",
-  "scripts": {
-    "lint": "eslint src",
-    "test": "npm run lint && jest && npm run docs",
-    "docs": "jsdoc src/** -d docs -R README.md"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hydrabolt/prism-media.git"
-  },
-  "keywords": [
-    "audio",
-    "media",
-    "ffmpeg",
-    "opus",
-    "pcm",
-    "webm",
-    "ogg"
-  ],
-  "author": "Amish Shah <amish@shah.gg>",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/hydrabolt/prism-media/issues"
-  },
-  "homepage": "https://github.com/hydrabolt/prism-media#readme",
-  "devDependencies": {
-    "eslint": "^8.19.0",
-    "jest": "^28.1.2",
-    "jsdoc": "^4.0.2"
-  },
-  "jest": {
-    "testEnvironmentOptions": {
-      "url": "http://localhost/"
-    }
-  },
-  "peerDependencies": {
-    "opusscript": "^0.0.8"
-  },
-  "peerDependenciesMeta": {
-    "opusscript": {
-      "optional": true
-    }
-  },
-  "files": [
-    "src/",
-    "typings/"
-  ],
-  "dependencies": {
-    "events": "^3.3.0",
-    "stream-browserify": "^3.0.0"
-  }
+	"name": "prism-media",
+	"version": "1.3.7",
+	"description": "Easy-to-use stream-based media transcoding",
+	"main": "src/index.js",
+	"types": "typings/index.d.ts",
+	"scripts": {
+		"lint": "eslint src",
+		"test": "npm run lint && jest && npm run docs",
+		"docs": "jsdoc src/** -d docs -R README.md"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/hydrabolt/prism-media.git"
+	},
+	"keywords": [
+		"audio",
+		"media",
+		"ffmpeg",
+		"opus",
+		"pcm",
+		"webm",
+		"ogg"
+	],
+	"author": "Amish Shah <amish@shah.gg>",
+	"license": "Apache-2.0",
+	"bugs": {
+		"url": "https://github.com/hydrabolt/prism-media/issues"
+	},
+	"homepage": "https://github.com/hydrabolt/prism-media#readme",
+	"devDependencies": {
+		"eslint": "^8.19.0",
+		"jest": "^28.1.2",
+		"jsdoc": "^4.0.2"
+	},
+	"jest": {
+		"testEnvironmentOptions": {
+			"url": "http://localhost/"
+		}
+	},
+	"peerDependencies": {
+		"opusscript": "^0.0.8"
+	},
+	"peerDependenciesMeta": {
+		"opusscript": {
+			"optional": true
+		}
+	},
+	"files": [
+		"src/",
+		"typings/"
+	],
+	"dependencies": {
+		"events": "^3.3.0",
+		"stream-browserify": "cyan-2048/stream-browserify"
+	}
 }
